--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.rochelug.org/napkid/keystone6-openid-auth.git"
+    "url": "https://github.com/napkid/keystone-6-openid-auth.git"
   },
   "keywords": [
     "keystone",
